--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
+    "react-tooltip": "^3.11.1",
     "styled-components": "^4.4.0"
   },
   "scripts": {
